# lectures

./: .gitignore  README.md  style_guide.md
01-STL-algorithms-06/: 01-STL-algorithms-06.md
01-STL-algorithms-06/source/: example.cpp  meson.build
01-STL-algorithms-06/src/: lambda
01-data-struct-07/: 01-data-struct-07.md
01-functions-02/: 01-functions-02.md
01-functions-02/lec_2/: CMakeLists.txt  main.cpp
01-functions-02/lec_2/include/: header.h
01-functions-02/lec_2/sources/: demo.cpp  source.cpp
01-introduction-00/: 01-introduction-00.md
01-introduction-00/theme/: monokai-pro.css
01-introduction-00/theme/source/: monokai-pro.scss
01-struct-04/: 01-struct-04.md  lec_4.cpp
01-types-01/: 01-examples-01.cpp  01-lec-01-code  01-lec-01-code.cpp  01-types-array-cond-loop-01.md  01-types-array-cond-loop.md
02-RAII-03/: 02-example-03  02-example-03.cpp  02-raii-03.md
02-classes-01/: 02-classes-01.md
02-classes-01/source/: bad_example.cpp  good_example.cpp  meson.build
02-multithreads-05/: 02-ex2-05.cpp  02-ex3-05.cpp  02-example-05.cpp  02-multithreading-05.md
